# correlation

./: .gitignore  README.md  main.py  pyproject.toml
correlation/: analytic.py  numeric.py  result.py  utils.py
docs/: high_order_correlations.typ
examples/: correlation_analysis.pptx  repetition_code.py  surface_code.py
src/correlation/: __init__.py  analytic.py  numeric.py  utils.py
src/tests/: test_analytic.py  test_numeric.py
tests/: test_numeric.py
